
Version: 0.10.0-9000 [2018-04-19]

NEW FEATURES:

 * Added mytoolbox() for organizing personal tools in separate 'mytoolbox'
   environment on the search path.  This way your customized functions and
   variables won't be removed if the global environment is erased.
   
 * Added partial() for creating tweaked version of existing functions by
   overriding one or more of the default arguments.
 

Version: 0.10.0 [2018-03-26]

SIGNIFICANT CHANGES:

 * Renviron and Rprofile startup files that use <key>=<value> filters with
   non-declared keys are skipped.  Previously they were always processed.
   This update makes it easier to include "secrets", e.g. files in folder
   ~/.Renviron.d/private/SECRET=banana/ will only be included if the
   environment variable 'SECRET' is set to exactly 'banana'.  An informative
   warning, which can be disabled, will be produced by startup 0.10.* until
   startup 0.11.0 is released.

NEW FEATURES:

 * Added is_debug_on() which returns TRUE if the startup debug mode is on.
   To control the debug mode, see ?startup::startup.

 * startup(debug = TRUE) reports on several R_* environment variables.
   
 * restart() gained argument 'quiet' for controlling whether the restart
   should be quiet or not.

 * Added flag 'microsoftr' to sysinfo() indicating whether R runs in
   Microsoft R Open or not.

 * Added flag 'pqr' to sysinfo() indicating whether running pqR ("A Pretty
   Quick Version of R"), or not.

 * Added flag 'rstudioterm' to sysinfo() indicating whether R runs in an
   RStudio Terminal or not.  To test whether R runs via the RStudio Console,
   use the 'rstudio' flag.

 * Added flag 'rtichoke' to sysinfo() indicating whether R runs in rtichoke
   (previously known as Rice) or not.  Please stop using the 'rice' flag and
   start using the 'rtichoke' instead (both have identical values).

 * The 'ess' flag of sysinfo() is now based on whether "ESSR" in search() or